--- a/webapp.yaml
+++ b/webapp.yaml
@@ -42,8 +42,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-service
+  annotations:
+    tailscale.com/expose: "true"
+    tailscale.com/hostname: "webapp"
 spec:
-  type: NodePort # configure as external service
+  #type: NodePort # configure as external service
   selector:
     app: webapp # should match the labels of the deployment
   ports:
