--- a/mongo-config.yaml
+++ b/mongo-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongo-config
+  namespace: sheshta-app
 data:
   # property-like keys; each key maps to a simple value
   mongo-url: mongo-service
-  
