--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongo-secret
+  namespace: sheshta-app
 type: Opaque
 data:
   mongo-user: bW9uZ291c2Vy # required field for kubernetes.io/basic-auth
