--- a/webapp.yaml
+++ b/webapp.yaml
@@ -2,28 +2,32 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: webapp-sa
+  namespace: sheshta-app
+
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: secret-all
-  namespace: default
+  namespace: sheshta-app
 subjects:
 - kind: ServiceAccount
   name: webapp-sa
 roleRef:
   kind: Role
   name: secret-all
-  
+
 ---
-#this file is to create deployment 
+#this file is to create deployment
 apiVersion: apps/v1
 kind: Deployment #blueprint for pods
 metadata:
   name: webapp-deployment
+  namespace: sheshta-app
   labels:
     app: webapp
+    owner: SheshtaOps
 spec:
   replicas: 3 #how many pods you want to create
   selector: #help to identify which pods are in which deployment
@@ -52,10 +56,15 @@ spec:
               name: mongo-secret
               key: mongo-password
         - name: DB_URL
-          valueFrom:  
+          valueFrom:
             configMapKeyRef:
               name: mongo-config
               key: mongo-url
+        securityContext:
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
 
       - name: tailscale
         image: tailscale/tailscale
@@ -75,16 +84,14 @@ spec:
               fieldPath: metadata.name
         - name: TS_KUBE_SECRET
           value: $(POD_NAME)
---- 
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: webapp-service
-
+  namespace: shesta-app
 spec:
-  #type: NodePort # configure as external service
   type: ClusterIP
-  
   selector:
     app: webapp # should match the labels of the deployment
   ports:
@@ -97,6 +104,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sheshta-app
+  namespace: sheshta-app
 spec:
   defaultBackend:
     service:
@@ -107,4 +115,3 @@ spec:
   tls:
     - hosts:
         - sheshta-app
-      
